change title header

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,6 +2,6 @@
   <img width="40" alt="Australia Post" src="assets/images/post-logo.jpg" class="post-logo"
   />
     <div class="spacer"></div>
-     <img src="assets/images/user.png" class="user-icon"  title="User-Anand" (click)="openAuthor()">
+     <img src="assets/images/user.png" class="user-icon"  title="Go to user profile" (click)="openAuthor()">
 </div>
 <router-outlet></router-outlet>
