--- a/src/app/components/post-code-component/post-code-component.component.html
+++ b/src/app/components/post-code-component/post-code-component.component.html
@@ -10,8 +10,11 @@
     </p-autoComplete>
     <button (click)='searchSuburb(postCode)' [disabled]='!((postCode && postCode.length>2 || isObject(postCode)))' class="btn-red" title="Click to find the suburbs within 4km range " >Search</button>
   </div>
-    <p-dataTable [rows]="10" [paginator]="true"  *ngIf="isSearchActive" [value]="tableData" [pageLinks]="3" [rowsPerPageOptions]="[5,10,20]">
-    <p-header><div *ngIf="this.tableData && this.tableData.length>0 ">List of suburbs within 4 km range from {{this.postCode&& this.postCode.name}}</div> </p-header>
+    <p-dataTable #dt [rows]="10" [paginator]="true"  *ngIf="isSearchActive" [value]="tableData" [pageLinks]="3" [rowsPerPageOptions]="[5,10,20]">
+    <p-header>
+      <button *ngIf="this.tableData && this.tableData.length>0 " class="btn-blue" type="button" pButton  (click)="dt.exportCSV()" style="float:right">
+      <div *ngIf="this.tableData && this.tableData.length>0 ">List of suburbs within 4 km range from {{this.postCode&& this.postCode.name}}</div>
+      </p-header>
     <p-column sortable="true" field="postcode" header="Post Code"></p-column>
     <p-column sortable="true" field="name" header="Name"></p-column>
     <p-column sortable="true" field="locality" header="Locality"></p-column>
